@@ -291,5 +291,6 @@
 \author{Henrik Bengtsson (\url{http://www.braju.com/R/})}
 
 
-\keyword{documentation}
 \keyword{internal}
+\keyword{methods}
+\keyword{documentation}
